--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+        <title>Manifesto Tech</title>
       </head>
 
     <body>
-
-        {{ content }}
-
+          <header class="header">
+            <div class="container-wrapper">
+                <h1 class="header__title">Manifesto <strong class="header__title-decoration">Tech</strong></h1>
+                <span class="header__decoration"></span>
+            </div>
+            <span class="header__decoration"></span>
+            </header>
+            {{ content }}
     </body>
 </html>
