--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,5 +20,15 @@
             <span class="header__decoration"></span>
             </header>
             {{ content }}
+        
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZF6B3K9RS5"></script>
+            <script>
+              window.dataLayer = window.dataLayer || [];
+              function gtag(){dataLayer.push(arguments);}
+              gtag('js', new Date());
+
+              gtag('config', 'G-ZF6B3K9RS5');
+            </script>
     </body>
 </html>
