--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
-        <title>Manifesto Tech</title>
+        <title>ManifestoTech.org</title>
+        <meta name="description" content="Manifesto para o mercado de tecnologia brasileiro expandir com transformação social.">
       </head>
 
     <body>
