--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:title" content="Manifesto Tech">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="{{ "/assets/images/og-image.png" | relative_url }}">
+        <meta property="og:image:alt" content="Logo do Manifesto Tech" >
         <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
