add meta property to description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
         <meta property="og:type" content="website">
         <meta property="og:image" content="{{ "/assets/images/og-image.png" | relative_url }}">
         <meta property="og:image:alt" content="Logo do Manifesto Tech" >
+        <meta name="og:description" content="Manifesto para o mercado de tecnologia brasileiro expandir com transformação social.">
         <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
