--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,8 +227,8 @@ details summary {
 }
 
 .faq .container-wrapper {
-  padding-left: 0;
-  padding-right: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .faq details{
