--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:title" content="Manifesto Tech">
+        <meta property="og:title" content="ManifestoTech.org">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="{{ "/assets/images/og-image.png" | relative_url }}">
+        <meta property="og:image" content="https://manifestotech.org/assets/images/og-image.png">
         <meta property="og:image:alt" content="Logo do Manifesto Tech" >
         <meta property="og:description" content="Manifesto para o mercado de tecnologia brasileiro expandir com transformação social.">
         <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
