--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="ManifestoTech.org">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://manifestotech.org/assets/images/og-image.png">
-        <meta property="og:image:alt" content="Logo do Manifesto Tech" >
+        <meta property="og:image:alt" content="Manifesto Tech">
         <meta property="og:description" content="Manifesto para o mercado de tecnologia brasileiro expandir com transformação social.">
         <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
