add favicon to html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
         <meta property="og:image" content="https://manifestotech.org/assets/images/og-image.png">
         <meta property="og:image:alt" content="Manifesto Tech">
         <meta property="og:description" content="Manifesto para o mercado de tecnologia brasileiro expandir com transformação social.">
+        <link rel="icon" href="https://manifestotech.org/assets/images/favicon.ico" >
         <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
