add script to handle assigners list btn

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,5 +37,6 @@
 
               gtag('config', 'G-ZF6B3K9RS5');
             </script>
+            <script src="{{ "/assets/scripts/index.js" | relative_url }}"></script>
     </body>
 </html>
