--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,7 @@ details summary {
   list-style: none;
   padding: 0;
   position: relative;
-  height: 12rem;
+  height: 36rem;
   overflow-y: hidden;
 }
 
@@ -216,7 +216,7 @@ details summary {
     position: absolute;
     bottom: 0;
     left: 0;
-    height: 50px;
+    height: 100px;
     width: 100%;
     background-image: linear-gradient(transparent 0%, white 20%);
 
@@ -380,6 +380,10 @@ details summary {
 
   .manifest__assigners .container-wrapper > ul::before {
     background-image: linear-gradient(transparent 10%, white 50%);
+  }
+
+  .manifest__assigners .container-wrapper > ul::before {
+    height: 50px;
   }
 
   .manifest__assigners  .container-wrapper > ul li{
